<resources>
	<string name="app_name">VCoinApp</string>
	<string name="action_settings">設定</string>
	<string name="searchbar_edittext_hint">搜尋關鍵字</string>
	<string name="global_connectFail">連結服務器失敗.</string>
	<string name="global_vendor_by">由:</string>
	<string name="global_mainDescription">主要內容: </string>
	<string name="global_addtionalDescription">其他內容:</string>
	<string name="global_expDate">到期日</string>
	<string name="global_calimedDate">換領日</string>
	<string name="global_Gender_Male">男</string>
	<string name="global_Gender_Female">女</string>
	<string name="global_stringForat_getData_Error">找尋數據失敗。</string>
	<string name="global_Mission_briefDescription">內容簡介</string>
	<string name="global_usercomment">用戶意見</string>
	<string name="global_textHasbeenCopied">複製編碼成功!</string>
	<string name="global_processing">處理中…</string>
	<string name="global_ok">成功</string>
	<string name="mainActionbar_rewardChannel">獎賞頻道</string>
	<string name="mainActionbar_appdownloads">下載手機程式</string>
	<string name="mainActionbar_mission">任務</string>
	<string name="mainActivity_doubleClickToExit">重按離開</string>
	<string name="splashActivity_app_name">VCOIN</string>
	<string name="splashActivity_summary">從完成任務換取真實獎賞。</string>
	<string name="searchActionbar_rewardChannel">獎賞</string>
	<string name="searchActionbar_appDownloads">手機程式</string>
	<string name="instructionsActivity_title">操作指南</string>
	<string name="instructionsActivity_toGain">賺取VCoin</string>
	<string name="instructionsActivity_toUse">使用</string>
	<string name="instructionsActivity_ok">成功</string>
	<string name="instructionsActivity_howToGain">如何賺取VCoins</string>
	<string name="instructionsActivity_howToUse">VCoins 的用處：</string>
	<string name="instructionsActivity_howToGain_desc">VCoinApp提供了一個手機應用程式列表，可以通過下載並使用不同的手機應用程式賺取VCoin。您可以用VCoins在我們的獎賞頻道兌換最新和心儀的折扣優惠。\n</string>
	<string name="instructionsActivity_howToUse_desc">上VCoins獎賞頻道去用VCoins兌換最喜歡的商品折扣優惠。\n您可以選擇自己喜歡的產品類別 - 從時尚，生活，寵物，食物等產品。\n在兌換你所喜歡的商品之前，首先看一條有關產品的簡短推廣視頻。\n注意有關的兌換細節和條款，並點擊確認制，便可使用VCoins兌換到您心儀的商品及優惠。\n</string>
	<string name="myVcoinActivity_title">我的VCoin</string>
	<string name="myVcoinActivity_VCOINS">VCoins</string>
	<string name="myVcoinActivity_YOUHAVE">您現有</string>
	<string name="myVcoinActivity_myVcoinBalance">我的VCoin結餘 :</string>
	<string name="myVcoinActivity_toGain">賺取?</string>
	<string name="myVcoinActivity_toUse">使用?</string>
	<string name="myVcoinActivity_showMore">更多</string>
	<string name="myVcoinActivity_wallet">的 VCOIN 錢包</string>
	<string name="myVcoinActivity_logUpdates">記錄資料</string>
	<string name="myVcoinActivity_myRewards">我的獎勵品</string>
	<string name="myVcoinActivity_myRewards_sub">已兌換之獎勵品及有待領取獎勵品名單</string>
	<string name="myVcoinActivity_myHistorys">我的 VCoin記錄</string>
	<string name="myVcoinActivity_myHistorys_sub">VCoin賺取/使用記錄</string>
	<string name="myVcoinActivity_EarnAndUse">賺取及使用方法介紹</string>
	<string name="myVcoinActivity_EarnAndUse_sub">如何賺取及使用</string>
	<string name="myVcoinActivity_setting">SETTING</string>
	<string name="myVcoinActivity_setting_sub">setting</string>
	<string name="myVcoinActivity_myECoupon">電子禮券</string>
	<string name="myVcoinActivity_myECoupon_sub">已兌換之電子禮券已經貯存在您的錢包</string>
	<string name="myVcoinActivity_IN">賺取</string>
	<string name="myVcoinActivity_OUT">已使用</string>
	<string name="myCouponsActivity_GoToLink">前往連結</string>
	<string name="myCouponsActivity_CopyCode">複製編碼</string>
	<string name="myCouponsActivity_title">電子禮券</string>
	<string name="transectionLogActivity_title">交易記錄</string>
	<string name="transectionLogActivity_log">記錄</string>
	<string name="redemptionActivity_Accept">接受</string>
	<string name="redemptionActivity_confirm">確認</string>
	<string name="redemptionActivity_Redeem">兌換!</string>
	<string name="redemptionActivity_actionbarTitle">兌換</string>
	<string name="redemptionActivity_Terms">條款及細則</string>
	<string name="redemptionActivity_description">內容</string>
	<string name="redemptionActivity_option1">選擇1</string>
	<string name="redemptionActivity_option2">選擇2</string>
	<string name="redemptionActivity_option3">選擇3</string>
	<string name="redemptionActivity_option4">選擇4</string>
	<string name="redemptionActivity_address">聯絡地址</string>
	<string name="redemptionActivity_countNoEnough">獎賞已售罄</string>
	<string name="redemptionActivity_notStock">暫時缺貨</string>
	<string name="redemptionActivity_finish_myRewards">我的獎賞</string>
	<string name="redemptionActivity_finish_confirm">確認</string>
	<string name="redemptionActivity_dialog_congratulations">恭喜你!</string>
	<string name="redemptionActivity_dialog_redeemSuccess">你已成功兌換以下獎賞!</string>
	<string name="redemptionActivity_dialog_claim">立即領取!</string>
	<string name="redemptionActivity_dialog_later">稍後領取</string>
	<string name="redeemFinishActivity_Title">確認</string>
	<string name="redeemFinishActivity_Thankyou">謝謝!</string>
	<string name="redeemFinishActivity_Notice">你的兌換正在處理中\n 請稍候 \n 當完成後會通知阁下。</string>
	<string name="redemptionHistoryActivity_title">我的獎賞</string>
	<string name="redemptionHistoryActivity_TAB_ALL">所有</string>
	<string name="redemptionHistoryActivity_TAB_unClaimed">有待領取</string>
	<string name="redemptionHistoryActivity_TAB_Claimed">已領取</string>
	<string name="redemptionHistoryDetailActivity_share">分享!</string>
	<string name="redemptionHistoryDetailActivity_comment">意見!</string>
	<string name="rewardDetaillActivity_UserComment">用戶意見:</string>
	<string name="rewardDetaillActivity_Redeem">兌換</string>
	<string name="rewardDetaillActivity_Share">分享!</string>
	<string name="rewardDetaillActivity_Comment">意見!</string>
	<string name="rewardDetaillActivity_CannotRedeem">您不能兌換此獎賞.</string>
	<string name="appDownloadsDetaillActivity_title">下載程式</string>
	<string name="appDownloadsDetaillActivity_donwload">下載!</string>
	<string name="appDownloadsDetaillActivity_share">分享!</string>
	<string name="appDownloadsDetaillActivity_comment">意見!</string>
	<string name="registerActivity_title">登記</string>
	<string name="captureActivity_scanQRCode">掃瞄QR編碼</string>
	<string name="loginActivity_title">登入/登記</string>
	<string name="loginActivity_navi_edit">編輯</string>
	<string name="loginActivity_signIn">登入</string>
	<string name="loginActivity_signUp">登記</string>
	<string name="loginActivity_notYourAC">賬戶不符</string>
	<string name="loginActivity_hint_userid">輸入電郵地址/用戶名稱</string>
	<string name="loginActivity_hint_userpassword">輸入密碼</string>
	<string name="loginActivity_textEmpty_userId">請輸入用戶名稱!</string>
	<string name="loginActivity_textEmpty_userPassword">請輸入密碼!</string>
	<string name="loginActivity_Login_Successful">成功登入!</string>
	<string name="loginActivity_summary">更多VCoin，給你更多的夢幻獎賞！</string>
	<string name="loginActivity_noHaveAccount">還沒登記？</string>
	<string name="loginActivity_createAccount"><u>立即登記。</u></string>
	<string name="myProfileActivity_title">個人簡介</string>
	<string name="myProfileActivity_setting">設定</string>
	<string name="myProfileActivity_signout">登出</string>
	<string name="myProfileActivity_edit">編輯</string>
	<string name="editProfileActivity_title">編輯個人簡介</string>
	<string name="DataProcessDialog_title">從伺服器獲取資料</string>
	<string name="DataProcessDialog_message">請稍候...</string>
	<string name="myRewardClaimProcess_noteNotice">注意:</string>
	<string name="settingActivity_title">設定</string>
	<string name="settingActivity_pushNotification">推送通知</string>
	<string name="settingActivity_password">密碼</string>
	<string name="settingActivity_email">電郵</string>
	<string name="settingActivity_changePassword">更改密碼</string>
	<string name="settingActivity_language">語言</string>
	<string name="settingActivity_connectToSNS">登入SNS</string>
	<string name="settingActivity_toGain">賺取?</string>
	<string name="settingActivity_toUse">使用?</string>
	<string name="settingActivity_Feedback">給我們意見</string>
	<string name="settingActivity_getSupport">需要支援</string>
	<string name="settingActivity_termCondition">條款及細則</string>
	<string name="settingActivity_privacyPolicy">隱私政策</string>
	<string name="settingActivity_about">有關VCoinApp</string>
	<string name="settingActivity_softwardVersion">軟件版本: %s</string>
	<string name="settingActivity_twitterID">twitter用戶</string>
	<string name="settingActivity_facebookID">facebook 用戶</string>
	<string name="settingActivity_tumblrID">tumblr 用戶</string>
	<string name="settingActivity_googleID">goolge+ 用戶</string>
	<string name="changePasswordActivity_title">更改密碼</string>
	<string name="changePasswordActivity_OK">確認</string>
	<string name="changePasswordActivity_oldPassword">輸入現時密碼</string>
	<string name="changePasswordActivity_newPassword">輸入新密碼</string>
	<string name="changePasswordActivity_confirmNewPassword">確認新密碼</string>
	<string name="changePasswordActivity_NoOldPassword">請輸入現時密碼!</string>
	<string name="changePasswordActivity_NoNewPassword">請輸入新密碼!</string>
	<string name="changePasswordActivity_NoConfirmPassword">請確認新密碼!</string>
	<string name="changePasswordActivity_passwordNoSome">確認新密碼...</string>
	<string name="changePasswordActivity_changePasswordSucceed">成功更改密碼!</string>
	<string name="missionFragment_NoLoginNotice">登入及領取任務.</string>
	<string name="shareActivity_title">分享</string>
	<string name="shareActivity_submit">提交</string>
	<string name="shareActivity_noData">請輸入您想分享的資料.</string>
	<string name="commentActivity_title">意見</string>
	<string name="commentActivity_userComment">用戶意見</string>
	<string name="commentActivity_noData">請輸入用戶意見</string>
	<string name="aboutActivity_title">關於 </string>
	<string name="aboutActivity_followTwitter">在Twitter關注VCoinApp</string>
	<string name="aboutActivity_followFacebook">在Facebook關注VCoinApp</string>
	<string name="aboutActivity_followGoogle">在Google 關注VCoinApp</string>
	<string name="aboutActivity_aboutContent">VCoinApp資料</string>
	<string name="myRewardClaimProcessActivity_continue">繼續</string>
	<string name="myRewardClaimProcessActivity_success_title">恭喜你!</string>
	<string name="myRewardClaimProcessActivity_success_notice">領取過程已成功核實。請聯絡店員以便提取您的獎勵品。</string>
	<string name="myRewardClaimProcessActivity_success_contentFormat">-交易名稱: %1$s \n\n-獎賞名稱: %2$s。</string>
	<string name="myRewardClaimProcessActivity_error_contentFormat">- %1$s.</string>
	<string name="myRewardClaimProcessActivity_error_title">-發生錯誤!</string>
	<string name="myRewardClaimProcessActivity_error_notice">由於以下原因，領取過程未能核實</string>
	<string name="pull_to_refresh_pull">拉下更新...</string>
	<string name="pull_to_refresh_release">離開屏幕更新...</string>
	<string name="pull_to_refresh_refreshing">轉載中...</string>
	<string name="title_activity_my_vocin">MyVocinActivity</string>
	<string name="title_activity_redemption_history">RedemptionHistoryActivity</string>
	<string name="title_activity_reward_channel">RewardChannelActivity</string>
	<string name="title_activity_app_downloads">AppDownloadsActivity</string>
	<string name="title_activity_redemption_history_detail">RedemptionHistoryDetailActivity</string>
	<string name="title_activity_reward_detail">RewardDetailActivity</string>
	<string name="title_activity_app_downloads_detail">AppDownloadsDetailActivity</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="title_activity_my_profile">MyProfileActivity</string>
	<string name="title_activity_edit_profile">EditProfileActivity</string>
	<string name="title_activity_search">SearchActivity</string>
	<string name="title_activity_redemption">RedemptionActivity</string>
	<string name="title_activity_redemption_confirm">RedemptionConfirmActivity</string>
	<string name="title_activity_redeem_finish">RedeemFinishActivity</string>
	<string name="title_activity_transection_log">TransectionLogActivity</string>
	<string name="title_activity_my_reward_detail">MyRewardDetailActivity</string>
	<string name="title_activity_my_coupons">MyCouponsActivity</string>
	<string name="title_activity_share">ShareActivity</string>
	<string name="title_activity_comment">CommentActivity</string>
	<string name="title_activity_instructions">InstructionsActivity</string>
	<string name="title_activity_setting">SettingActivity</string>
</resources>