<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity"
	android:id="@+id/login_layout_bg"
	android:background="@drawable/login_bg">
	<!-- 
	<LinearLayout 
		android:id="@+id/login_layout_bottom"
		android:layout_width="match_parent"
		android:layout_height="@dimen/login_bottombar_height"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true">
		<Button
			android:id="@+id/login_btnSignIn"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textStyle="bold"
			android:text="@string/loginActivity_signIn"
			android:background="@color/global_bottomMenu_bg"
			android:textColor="@color/global_Text_Title"
			/>
		<Button
			android:id="@+id/login_btnSingUp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textStyle="bold"
			android:text="@string/loginActivity_signUp"
			android:background="@color/global_bottomMenu_bg"
			android:textColor="@color/global_Text_Title"/>
		
	</LinearLayout>
	 -->
	
		<!-- 
		<ImageView 
			android:id="@+id/login_imgUserIcon"
			android:layout_width="150dip"
			android:layout_height="150dip"
			android:src="@drawable/userprofile_nopic_default_big"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dip"
			/> 
			 -->
		<LinearLayout 
			android:id="@+id/login_layout_edit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical">
			<!-- 
			<com.imusic.vcoinapp.widgets.TextboxForProfileLarge
			android:id="@+id/login_tvUserId"
			android:layout_width="match_parent"
			android:layout_height="60dip"
			android:layout_marginLeft="25dip"
			android:layout_marginRight="25dip"
			android:layout_marginTop="20dip"
			 />
		<com.imusic.vcoinapp.widgets.TextboxForProfileLarge
			android:id="@+id/login_tvPassword"
			android:layout_width="match_parent"
			android:layout_height="60dip"
			android:layout_marginTop="15dip"
			android:layout_marginLeft="25dip"
			android:layout_marginRight="25dip" />
			 -->
			 <EditText 
			 	android:id="@+id/login_tvUserId"
				android:layout_width="match_parent"
				android:layout_height="50dip"
				android:layout_marginLeft="30dip"
				android:layout_marginRight="30dip"
				android:paddingLeft="10dip"
				android:gravity="center_vertical"
				android:textSize="14sp"
				android:background="@drawable/textbox_stroke_write"
				android:hint="@string/loginActivity_hint_userid"
				android:textColor="@color/global_Text_Title"
				android:textColorHint="@color/global_Text_Title"
				android:singleLine="true"
				android:inputType="text"/>
			 <EditText 
			 	android:id="@+id/login_tvPassword"
				android:layout_width="match_parent"
				android:layout_height="50dip"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="30dip"
				android:layout_marginRight="30dip"
				android:paddingLeft="10dip"
				android:gravity="center_vertical"
				android:textSize="14sp"
				android:background="@drawable/textbox_stroke_write"
				android:hint="@string/loginActivity_hint_userpassword"
				android:textColor="@color/global_Text_Title"
				android:textColorHint="@color/global_Text_Title"
				android:singleLine="true"
				android:inputType="textPassword"/>
		</LinearLayout>
		<RelativeLayout 
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/login_layout_edit">
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:orientation="vertical">
				<LinearLayout 
					android:layout_width="wrap_content"
					android:layout_height="80dip"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal"
					android:gravity="center_horizontal">
					<ImageView 
						android:layout_width="70dip"
						android:layout_height="70dip"
						android:src="@drawable/splash_icon"/>
					<TextView 
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_marginLeft="10dip"
						android:text="@string/splashActivity_app_name"
						android:textSize="35sp"
						android:textColor="@color/global_Text_Title"
						android:gravity="center_vertical"/>
				</LinearLayout>
				<TextView 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/loginActivity_summary"
					android:textColor="@color/global_Text_Title"
					android:layout_marginTop="10dip"
					android:textSize="11sp"/>
			</LinearLayout>
		</RelativeLayout>
		<Button 
			android:id="@+id/login_btnSignIn"
			android:layout_width="match_parent"
			android:layout_height="40dip"
			android:layout_below="@id/login_layout_edit"
			android:layout_marginTop="40dip"
			android:layout_marginLeft="60dip"
			android:layout_marginRight="60dip"
			android:textColor="@color/global_Text_Title"
			android:textSize="14sp"
			android:background="@drawable/textbox_stroke_write"
			android:text="@string/loginActivity_signIn" />
		<LinearLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/login_btnSignIn"
			android:layout_marginTop="15dip"
			android:orientation="horizontal"
			android:layout_centerHorizontal="true">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/loginActivity_noHaveAccount"
				android:textSize="11sp"
				android:textColor="@color/global_Text_Title"/>
			<TextView 
				android:id="@+id/login_tvCreateAccount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/loginActivity_createAccount"
				android:textSize="11sp"
				android:layout_marginLeft="3dip"
				android:textColor="@color/global_Text_Title"
				/>
		</LinearLayout>

</RelativeLayout>
